--- a/index.html
+++ b/index.html
@@ -1,35 +1,23 @@
 <html>
 <head>
-	<link rel ="stylesheet" type="text/css" href="style.css">
+	
 	<title>UTS Web Pemrograman</title>
 	
 </head>
 <body>
-	<table class="tb2" border="2px" cellpadding="8">
+	
 		<tr>
-			<th colspan="4" bgcolor="sky blue">My Profile</th>
-		</tr>
+			<td>KAMPUS : </td><width="300"><input type="text" size="75" maxlength="100" /></td>
+		</tr><br>
+		<br>
 		<tr>
-			<td>Nama</td>
-			<td>:</td>
-			<td>Mia Sania Putri</td>
-			<td rowspan="7" style="text-align: center;">Foto</td>
-		</tr>
-		<tr>
-			<td>Kelas</td>
-			<td>:</td>
-			<td>1.1D</td>
-		</tr>
-		<tr>
-			<td>Prodi</td>
-			<td>:</td>
-			<td>Teknik Informatika</td>
-		</tr>
-		<tr>
-			<td>Hobby</td>
-			<td>:</td>
-			<td>Menyanyi dan Mengarang Lagu</td>
-		</tr>
+			<td>PRODI : </td><td><select>
+			<option>-pilih-</option>
+			<option>SISTEM INFORMASI</option>
+			<option>TEKNIK INFORMATIKA</option>
+			<option>PENDIDIKAN SD</option>
+			<option>MATEMATIKA</option>
+			</select></td>
 		
 </body>
 </html>
